# weixin-automation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: __init__.py  fill_wechat_draft.py  inspect_wechat_ax.py
tests/: test_ax_wrapper.py  test_screen_ocr.py  test_wechat_flow.py
weixin_automation/: __init__.py  ax.py  cli.py  keyboard.py  ocr.py  screen.py  wechat_flow.py
